--- a/Cadres/app/src/main/res/layout/fragment_yjjc_cadre.xml
+++ b/Cadres/app/src/main/res/layout/fragment_yjjc_cadre.xml
@@ -92,9 +92,11 @@
 
             <TextView
                 android:id="@+id/tv_name"
-                android:layout_width="@dimen/dp_80"
+                android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_tip2"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -111,8 +113,10 @@
 
             <TextView
                 android:id="@+id/tv_sex"
-                android:layout_width="@dimen/dp_80"
+                android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_name"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -131,9 +135,11 @@
 
             <TextView
                 android:id="@+id/tv_mz"
-                android:layout_width="@dimen/dp_80"
+                android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_sex"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -150,8 +156,10 @@
 
             <TextView
                 android:id="@+id/tv_jg"
-                android:layout_width="@dimen/dp_80"
+                android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_mz"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -163,16 +171,64 @@
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintStart_toEndOf="@+id/tv_jg"
-                app:layout_constraintEnd_toStartOf="@+id/tv_zzxl"
+                app:layout_constraintEnd_toStartOf="@+id/tv_xrzw"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:background="@color/color_ffd7b4"/>
+
+
+            <TextView
+                android:id="@+id/tv_xrzw"
+                android:layout_width="@dimen/dp_120"
+                android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
+                android:gravity="center"
+                app:layout_constraintStart_toEndOf="@+id/tv_jg"
+                app:layout_constraintTop_toTopOf="@+id/view_title"
+                app:layout_constraintBottom_toBottomOf="@+id/view_title"
+                android:text="现任职务"/>
+
+            <View
+                android:layout_width="@dimen/dp_1"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@+id/view_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
+                app:layout_constraintEnd_toStartOf="@+id/tv_nrmzw"
+                app:layout_constraintBottom_toBottomOf="@+id/view_title"
+                android:background="@color/color_ffd7b4"/>
+
+
+            <TextView
+                android:id="@+id/tv_nrmzw"
+                android:layout_width="@dimen/dp_120"
+                android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
+                android:gravity="center"
+                app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
+                app:layout_constraintTop_toTopOf="@+id/view_title"
+                app:layout_constraintBottom_toBottomOf="@+id/view_title"
+                android:text="拟任免(提名)职务"/>
+
+            <View
+                android:layout_width="@dimen/dp_1"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@+id/view_title"
+                app:layout_constraintStart_toEndOf="@+id/tv_zzxl"
+                app:layout_constraintEnd_toStartOf="@+id/tv_jwyj"
+                app:layout_constraintBottom_toBottomOf="@+id/view_title"
+                android:background="@color/color_ffd7b4"/>
+
+
 
             <TextView
                 android:id="@+id/tv_zzxl"
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_jg"
+                app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:text="在职学历"/>
@@ -191,6 +247,8 @@
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_zzxl"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -209,6 +267,8 @@
                 android:id="@+id/tv_zzzy"
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_qrzxl"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -230,6 +290,8 @@
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_zzzy"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -249,6 +311,8 @@
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -268,6 +332,8 @@
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_zzxw"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -287,6 +353,8 @@
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -305,6 +373,8 @@
                 android:id="@+id/tv_csny"
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_zyjszw"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -324,6 +394,8 @@
                 android:id="@+id/tv_gzsj"
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_csny"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -342,6 +414,8 @@
             <TextView
                 android:id="@+id/tv_rdsj"
                 android:layout_width="@dimen/dp_80"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:layout_height="0dp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_gzsj"
@@ -361,6 +435,8 @@
             <TextView
                 android:id="@+id/tv_rxzsj"
                 android:layout_width="@dimen/dp_80"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:layout_height="0dp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_rdsj"
@@ -382,6 +458,8 @@
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_rxzsj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -400,6 +478,8 @@
                 android:id="@+id/tv_thdytj"
                 android:layout_width="@dimen/dp_120"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_rxzjsj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -419,6 +499,8 @@
                 android:id="@+id/tv_thdytj_yxp"
                 android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_rxzjsj"
                 app:layout_constraintTop_toBottomOf="@+id/tv_thdytj"
@@ -439,6 +521,8 @@
                 android:id="@+id/tv_thdytj_dps"
                 android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_thdytj_yxp"
                 app:layout_constraintTop_toBottomOf="@+id/tv_thdytj"
@@ -459,6 +543,8 @@
                 android:layout_width="@dimen/dp_120"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_thdytj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toTopOf="@+id/tv_hytj_yxp"
@@ -477,6 +563,8 @@
                 android:id="@+id/tv_hytj_yxp"
                 android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_thdytj"
                 app:layout_constraintTop_toBottomOf="@+id/tv_hytj"
@@ -497,6 +585,8 @@
                 android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_hytj_yxp"
                 app:layout_constraintTop_toBottomOf="@+id/tv_hytj"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -507,56 +597,19 @@
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintStart_toEndOf="@+id/tv_hytj"
-                app:layout_constraintEnd_toStartOf="@+id/tv_xrzw"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:background="@color/color_ffd7b4"/>
-
-
-            <TextView
-                android:id="@+id/tv_xrzw"
-                android:layout_width="@dimen/dp_100"
-                android:layout_height="0dp"
-                android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_hytj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="现任职务"/>
-
-            <View
-                android:layout_width="@dimen/dp_1"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
-                app:layout_constraintEnd_toStartOf="@+id/tv_nrmzw"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:background="@color/color_ffd7b4"/>
-
-
-            <TextView
-                android:id="@+id/tv_nrmzw"
-                android:layout_width="@dimen/dp_100"
-                android:layout_height="0dp"
-                android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="拟任免(提名)职务"/>
-
-            <View
-                android:layout_width="@dimen/dp_1"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
                 app:layout_constraintEnd_toStartOf="@+id/tv_jwyj"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:background="@color/color_ffd7b4"/>
+
 
             <TextView
                 android:id="@+id/tv_jwyj"
                 android:layout_width="@dimen/dp_80"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
+                app:layout_constraintStart_toEndOf="@+id/tv_hytj_dps"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:text="纪委意见"/>
@@ -573,6 +626,8 @@
             <TextView
                 android:id="@+id/tv_zzbyj"
                 android:layout_width="@dimen/dp_80"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:layout_height="0dp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_jwyj"
@@ -594,6 +649,8 @@
                 android:layout_width="@dimen/dp_180"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_zzbyj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toTopOf="@+id/tv_cwhyj_yxp"
@@ -612,6 +669,8 @@
                 android:id="@+id/tv_cwhyj_yxp"
                 android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_zzbyj"
                 app:layout_constraintTop_toBottomOf="@+id/tv_cwhyj"
@@ -630,6 +689,8 @@
             <TextView
                 android:id="@+id/tv_cwhyj_dps"
                 android:layout_width="@dimen/dp_60"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:layout_height="0dp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_yxp"
@@ -650,6 +711,8 @@
                 android:id="@+id/tv_cwhyj_jg"
                 android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_dps"
                 app:layout_constraintTop_toBottomOf="@+id/tv_cwhyj"
@@ -671,6 +734,8 @@
                 android:layout_width="@dimen/dp_100"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:paddingStart="@dimen/dp_3"
+                android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_cwhyj"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
