--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
@@ -43,9 +43,11 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_tip2"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -62,9 +64,11 @@
 
     <TextView
         android:id="@+id/tv_sex"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_name"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -82,9 +86,11 @@
 
     <TextView
         android:id="@+id/tv_mz"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_sex"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -101,9 +107,11 @@
 
     <TextView
         android:id="@+id/tv_jg"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_mz"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -114,6 +122,50 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintStart_toEndOf="@+id/tv_jg"
+        app:layout_constraintEnd_toStartOf="@+id/tv_xrzw"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:background="@color/color_ffd7b4"/>
+
+
+    <TextView
+        android:id="@+id/tv_xrzw"
+        android:layout_width="@dimen/dp_120"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_jg"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        tools:text="现任职务"/>
+
+    <View
+        android:layout_width="@dimen/dp_1"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
+        app:layout_constraintEnd_toStartOf="@+id/tv_nrmzw"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        android:background="@color/color_ffd7b4"/>
+
+
+    <TextView
+        android:id="@+id/tv_nrmzw"
+        android:layout_width="@dimen/dp_120"
+        android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        android:gravity="center"
+        app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintBottom_toBottomOf="@+id/view_title"
+        tools:text="拟任免(提名)职务"/>
+
+    <View
+        android:layout_width="@dimen/dp_1"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@+id/view_title"
+        app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
         app:layout_constraintEnd_toStartOf="@+id/tv_zzxl"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
@@ -122,8 +174,10 @@
         android:id="@+id/tv_zzxl"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_jg"
+        app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="在职学历"/>
@@ -142,6 +196,8 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_zzxl"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -160,6 +216,8 @@
         android:id="@+id/tv_zzzy"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_qrzxl"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -180,6 +238,8 @@
         android:id="@+id/tv_qrzzy"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zzzy"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -200,6 +260,8 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -218,6 +280,8 @@
         android:id="@+id/tv_qrzxw"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zzxw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -237,6 +301,8 @@
         android:id="@+id/tv_zyjszw"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -255,6 +321,8 @@
     <TextView
         android:id="@+id/tv_csny"
         android:layout_width="@dimen/dp_80"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:layout_height="0dp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zyjszw"
@@ -274,6 +342,8 @@
     <TextView
         android:id="@+id/tv_gzsj"
         android:layout_width="@dimen/dp_80"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:layout_height="0dp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_csny"
@@ -295,6 +365,8 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_gzsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -314,6 +386,8 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rdsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -333,6 +407,8 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rxzsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -352,6 +428,8 @@
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rxzjsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -370,6 +448,8 @@
         android:id="@+id/tv_thdytj_dps"
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_thdytj_yxp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -389,6 +469,8 @@
         android:id="@+id/tv_hytj_yxp"
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_thdytj_dps"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -408,10 +490,12 @@
         android:id="@+id/tv_hytj_dps"
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="@+id/tv_hytj_yxp"
         app:layout_constraintStart_toEndOf="@+id/tv_hytj_yxp"
-        app:layout_constraintEnd_toStartOf="@+id/tv_xrzw"
+        app:layout_constraintEnd_toStartOf="@+id/tv_jwyj"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="得票数"/>
 
@@ -420,45 +504,6 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintStart_toEndOf="@+id/tv_hytj_dps"
-        app:layout_constraintEnd_toStartOf="@+id/tv_xrzw"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:background="@color/color_ffd7b4"/>
-
-    <TextView
-        android:id="@+id/tv_xrzw"
-        android:layout_width="@dimen/dp_100"
-        android:layout_height="0dp"
-        android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_hytj_dps"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        tools:text="现任职务"/>
-
-    <View
-        android:layout_width="@dimen/dp_1"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
-        app:layout_constraintEnd_toStartOf="@+id/tv_nrmzw"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:background="@color/color_ffd7b4"/>
-
-
-    <TextView
-        android:id="@+id/tv_nrmzw"
-        android:layout_width="@dimen/dp_100"
-        android:layout_height="0dp"
-        android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        tools:text="拟任免(提名)职务"/>
-
-    <View
-        android:layout_width="@dimen/dp_1"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
         app:layout_constraintEnd_toStartOf="@+id/tv_jwyj"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
@@ -468,7 +513,9 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_nrmzw"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_hytj_dps"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         tools:text="纪委意见"/>
@@ -486,6 +533,8 @@
         android:id="@+id/tv_zzbyj"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jwyj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -505,6 +554,8 @@
         android:id="@+id/tv_cwhyj_yxp"
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zzbyj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -525,6 +576,8 @@
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_yxp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -544,6 +597,8 @@
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_dps"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -564,6 +619,8 @@
         android:layout_width="@dimen/dp_100"
         android:layout_height="0dp"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_jg"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
